--- a/ball.html
+++ b/ball.html
@@ -5,6 +5,7 @@
 <title>Прыгающий мяч</title>
 </head>
 <body>
+	<p>Прыгунчик</p>
 <canvas id="canvas" width="400" height="400"></canvas>
 <script>
 
